虚拟机快照创建和删除API和网页

--- a/vms/templates/vm_operations.html
+++ b/vms/templates/vm_operations.html
@@ -51,8 +51,7 @@
             </button>
         </li>
         <li>
-            <button class="btn btn-xs btn-info btn-block"
-                    onclick="alert('暂不支持此操作');">创建快照
+            <button class="btn btn-xs btn-info btn-block btn-vm-snap-create" data-vm-uuid="{{ vm.hex_uuid }}">创建快照
             </button>
         </li>
     </ul>
