--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
                     <li id="nav_vm_list"><a href="{% url "vms:vms-list" %}">云主机</a></li>
                     <li id="nav_vdisk_list"><a href="{% url "vdisk:vdisk-list" %}">云硬盘</a></li>
                     <li id="nav_vlan_list"><a href="{% url "network:vlan_list" %}">网络</a></li>
+                    <li id="nav_image_list"><a href="{% url "image:image-list" %}">镜像</a></li>
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
                     <li class="dropdown">
