--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -44,7 +44,7 @@
                                         <span class="btn btn-sm btn-update-vm-status"><span class="glyphicon glyphicon-refresh"></span></span>
                                     </div>
                                     <div class="col-md-4"><strong>创建者：</strong>{{vm.user}}</div>
-                                    <div class="col-md-4"><strong>创建时间：</strong>{{vm.create_time}}</div>
+                                    <div class="col-md-4"><strong>创建时间：</strong>{{vm.create_time|date:'Y-m-d H:i:s'}}</div>
                                 </div>
                             </div>
                         </li>
