--- a/vdisk/templates/vdisk_list.html
+++ b/vdisk/templates/vdisk_list.html
@@ -89,15 +89,15 @@
                             <td>{{ disk.quota }}</td>
                             <td>{{ disk.size|sizeformat:'GB' }}</td>
                             <td>{{ disk.user }}</td>
-                            <td>{{ disk.create_time }}</td>
+                            <td>{{ disk.create_time|date:'Y-m-d H:i:s' }}</td>
                             {% if disk.vm %}
                                 <td>{{ disk.vm.ipv4 }}</td>
-                                <td>{{ disk.attach_time }}</td>
+                                <td>{{ disk.attach_time|date:'Y-m-d H:i:s' }}</td>
                             {% else %}
                                 <td>未挂载</td>
                                 <td>无</td>
                             {% endif %}
-                             <td>
+                            <td>
                                 {%if disk.enable%}
                                     <span class="glyphicon glyphicon-ok"></span>
                                 {%else%}
