资源统计API和网页实现

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <li id="nav_image_list"><a href="{% url "image:image-list" %}">镜像</a></li>
                     {% if user.is_superuser %}
                         <li id="nav_vlan_list"><a href="{% url "network:vlan_list" %}">网络</a></li>
-                        <li><a href="{% url 'reports:reports-list' %}">统计报表</a></li>
+                        <li id="nav_reports"><a href="{% url 'reports:reports-list' %}">统计报表</a></li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav  navbar-right">
