--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -27,7 +27,7 @@
                 </tr>
                 {% for c in centers %}
                     <tr>
-                        <td>{{c.name}}</td>
+                        <td><a href="{% url 'reports:reports-center' id=c.id %}">{{c.name}}</a></td>
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
@@ -57,8 +57,8 @@
                 </tr>
                 {% for c in groups %}
                     <tr>
-                        <td>{{c.name}}</td>
-                        <td>{{c.name}}</td>
+                        <td><a href="{% url 'reports:reports-group' id=c.id %}">{{c.name}}</a></td>
+                        <td>{{c.center__name}}</td>
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
@@ -89,7 +89,7 @@
                 {% for c in hosts %}
                     <tr>
                         <td>{{c.ipv4}}</td>
-                        <td>{{c.group.name}}</td>
+                        <td>{{c.group__name}}</td>
                         <td>{{c.vcpu_total}}</td>
                         <td>{{c.vcpu_allocated}}</td>
                         <td>{{c.vcpu_allocated | percentageformat:c.vcpu_total}}</td>
@@ -105,5 +105,7 @@
 {% endblock %}
 
 {% block script %}
-{#    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>#}
+    <script>
+        $("#nav_reports").addClass("active");
+    </script>
 {% endblock %}
