--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -75,6 +75,6 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_edit.js' %}"></script>
 {% endblock %}
