--- a/reports/templates/reports_center.html
+++ b/reports/templates/reports_center.html
@@ -54,7 +54,7 @@
 {% block script %}
     <script type="text/javascript" src="{% static 'chartjs/Chart-2.9.3.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'art-template/template-web.js' %}"></script>
-    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'reports/reports_common.js' %}"></script>
     {% verbatim %}
     <script>
