--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -209,7 +209,7 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'art-template/template-web.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_detail.js' %}"></script>
