--- a/vms/templates/vm_mount_disk.html
+++ b/vms/templates/vm_mount_disk.html
@@ -115,7 +115,7 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_mount_disk.js' %}"></script>
 {% endblock %}
 
