--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -164,7 +164,7 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="{% static 'vms/vms_common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_list.js' %}"></script>
 {% endblock %}
