--- a/templates/base.html
+++ b/templates/base.html
@@ -3,81 +3,68 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.4.1/css/bootstrap.min.css' %}">
 	{% block head %}{% endblock %}
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid col-xs-offset-1 col-xs-10">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    EVCloud云主机
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li id="nav_vm_list"><a href="{% url "vms:vms-list" %}">云主机</a></li>
-                    <li id="nav_vdisk_list"><a href="{% url "vdisk:vdisk-list" %}">云硬盘</a></li>
-                    <li id="nav_image_list"><a href="{% url "image:image-list" %}">镜像</a></li>
-                    {% if user.is_superuser %}
-                        <li id="nav_vlan_list"><a href="{% url "network:vlan_list" %}">网络</a></li>
-                        <li id="nav_reports"><a href="{% url 'reports:reports-list' %}">统计报表</a></li>
-                    {% endif %}
-                </ul>
-                <ul class="nav navbar-nav  navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">帮助&文档<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{% url 'apidocs' %}" target="view_window" >API文档</a></li>
-                            <li><a href="{% url 'docs:docs' %}">文档</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="nav navbar-nav">
-                            {% if user.is_authenticated %}
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                                       aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>{{ user.username }} <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="{% url 'users:logout' %}?next=/">登出</a></li>
-                                        <li><a href="{% url 'users:change_password' %}">修改密码</a></li>
-                                        <li role="separator" class="divider"></li>
-                                        {% if user.is_superuser %}
-                                            <li><a href="{% url 'admin:index' %}">后台管理</a></li>
-                                        {% endif %}
-                                    </ul>
-                                </li>
-                            {% else %}
-                                <li><a href="{% url 'users:login' %}">登录</a></li>
-                                <li><a href="{% url 'users:register' %}">注册</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">EVCloud</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" id="nav_vm_list"><a class="nav-link" href="{% url "vms:vms-list" %}">云主机</a></li>
+                <li class="nav-item" id="nav_vdisk_list"><a class="nav-link" href="{% url "vdisk:vdisk-list" %}">云硬盘</a></li>
+                <li class="nav-item" id="nav_image_list"><a class="nav-link" href="{% url "image:image-list" %}">镜像</a></li>
+                {% if user.is_superuser %}
+                    <li class="nav-item" id="nav_vlan_list"><a class="nav-link" href="{% url "network:vlan_list" %}">网络</a></li>
+                    <li class="nav-item" id="nav_reports"><a class="nav-link" href="{% url 'reports:reports-list' %}">统计报表</a></li>
+                {% endif %}
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                           aria-haspopup="true" aria-expanded="false">帮助&文档<span class="caret"></span></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'apidocs' %}" target="view_window" >API文档</a>
+                        <a class="dropdown-item" href="{% url 'docs:docs' %}">文档</a>
+                    </div>
+                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                           aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-user"></i>{{ user.username }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'users:logout' %}?next=/">登出</a>
+                            <a class="dropdown-item" href="{% url 'users:change_password' %}">修改密码</a>
+                            <div class="dropdown-divider"></div>
+                            {% if user.is_superuser %}
+                                <a class="dropdown-item" href="{% url 'admin:index' %}">后台管理</a>
                             {% endif %}
-                        </ul>
+                        </div>
                     </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+                {% else %}
+                    <a class="dropdown-item" href="{% url 'users:login' %}">登录</a>
+                    <a class="dropdown-item" href="{% url 'users:register' %}">注册</a>
+                {% endif %}
+            </ul>
+        </div>
     </nav>
     <div style="padding-top: 60px;padding-bottom: 30px;">
         {% block boby %}{% endblock %}
     </div>
-    <footer class="navbar-fixed-bottom" style="background: #dddddd">
-        <div class="text-center">
-            <p><a href="http://www.cnic.cas.cn/">中国科学院计算机网络信息中心</a> 科技云部</p>
-        </div>
+    <footer class="fixed-bottom text-center" style="background: #dddddd">
+        <p><a href="http://www.cnic.cas.cn/">中国科学院计算机网络信息中心</a> 科技云部</p>
     </footer>
-    <script type="text/javascript" src="{% static 'jquery2.2.4/dist/jquery-2.2.4.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'jquery/jquery-3.4.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap-4.4.1/js/bootstrap.bundle.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'fontawesome-free/js/all.min.js' %}"></script>
 	{% block script %}{% endblock %}
 </body>
 </html>
