--- a/vms/templates/vm_operations.html
+++ b/vms/templates/vm_operations.html
@@ -1,5 +1,5 @@
 <div class="btn-group">
-    <button type="button" class="btn btn-sm btn-success btn-vnc-open" data-vm-uuid="{{ vm.hex_uuid }}">
+    <button type="button" class="btn btn-sm btn-info btn-vnc-open" data-vm-uuid="{{ vm.hex_uuid }}">
         <i class="fa fa-desktop"></i></button>
     <button type="button" class="btn btn-sm btn-success dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">操作
